# uibox

./: .gitignore  Cargo.toml  Makefile  README.md  README.zh-CN.md  pack-win-package.sh
.github/workflows/: action.yml
uibox/: Cargo.toml  build.rs
uibox/src/: main.rs  version.rs
uibox/src/config/: conf.rs  data.rs  mod.rs
uibox/src/logic/: about.rs  chat.rs  colors.rs  colorsdata.rs  data.rs  fonts.rs  maker.rs  message.rs  mod.rs  picker.rs  setting.rs
uibox/src/util/: fs.rs  http.rs  mod.rs  translator.rs
uibox/ui/: appwindow.slint  logic.slint  store.slint  theme.slint  translator.slint
uibox/ui/base/: cdialog.slint  icon-btn.slint  no-data.slint  ring.slint  tab-btn.slint
uibox/ui/body/: colormaker.slint  colorpalette.slint  colorpicker.slint  colors.slint  font.slint  help.slint  panel.slint  picture.slint  setting.slint
uibox/ui/body/colorpalette/: colors.slint  panel.slint
uibox/ui/body/createimg/: bitem.slint  panel.slint  question.slint  uitem.slint
uibox/ui/body/font/: display.slint  name.slint  panel.slint
uibox/ui/body/systemfont/: display.slint  name.slint  panel.slint
uibox/ui/dialog/: about.slint  help.slint
uibox/ui/dialog/setting/: dialog.slint  image-gen.slint  proxy.slint  ui.slint
uibox/ui/side/: panel.slint
win/: version.h
