[package]
name = "uibox"
version = "0.1.0"
authors = ["heng30.xyz"]
edition = "2021"
build = "build.rs"
description = "Common UI Box"
license = "MIT"
categories= ["UI", "Slint"]
keywords= ["UI", "Slint", "Rust"]

[dependencies]
log = "0.4"
env_logger = "0.9"
platform-dirs = "0.3"
lazy_static = "1.4"
serde = "1.0.139"
serde_derive = "1.0.139"
serde_json = "1.0.82"
clipboard = "0.5"
font-kit = "0.11"
anyhow = "1.0"
chrono = "0.4"
slint = { version = "1.1", features = ["log"] }

[build-dependencies]
slint-build = "1.0.0"
cmd_lib = "1.3"

