[package]
name = "uibox"
version = "0.3.0"
authors = ["heng30.xyz"]
edition = "2021"
build = "build.rs"
description = "Common UI Box"
license = "MIT"
categories= ["UI", "Slint"]
keywords= ["UI", "Slint", "Rust"]

[dependencies]
log = "0.4"
env_logger = "0.9"
platform-dirs = "0.3"
native-dialog = "0.6"
lazy_static = "1.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
clipboard = "0.5"
font-kit = "0.11"
anyhow = "1.0"
chrono = "0.4"
image = "0.24"

uuid = { version = "1.3", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "socks"] }
tokio = {version = "1.17", features = ["full"]}
slint = { version = "1.2", features = ["log"] }

[build-dependencies]
slint-build = "1.2"
cmd_lib = "1.3"

